# UrlShortener

./: pyproject.toml
UrlShortener/: manage.py
UrlShortener/UrlShortener/: asgi.py  settings.py  urls.py  wsgi.py
