[tool.poetry]
name = "urlshortener"
version = "0.1.0"
description = ""
authors = ["Evgeny <ytrokinterteiment@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
